# job-clustering

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  schema.sql
data/: deconfound_transform.npz  target_companies.json
docs/: ARCHITECTURE.md  METHODOLOGY.md
jobproc/: __init__.py  ats_scrapers.py  config.py  db.py  deconfound.py  embedder.py  encode.py  filters.py  hashing.py  html_report.py  ingest.py  neighborhood.py  texts.py  title_normalize.py
scripts/: init_db.py  load_dump.py  run_encode.py  run_ingest.py  run_neighborhood.py
tests/: test_filters.py  test_hashing.py  test_title_normalize.py
